--- a/app/views/layouts/_footer.html.slim
+++ b/app/views/layouts/_footer.html.slim
@@ -1,4 +1,5 @@
 hr
-
 footer.footer
-  = link_to "About", about_path
+  .text-center
+    = link_to "About | ", about_path
+    = link_to "© 2017 Marcel Breuer ", author_path
