--- a/app/views/static_pages/home.html.slim
+++ b/app/views/static_pages/home.html.slim
@@ -13,7 +13,8 @@
   - else
     - provide(:title, 'Welcome')
     div.col-md-12.one-col
-      h1 Welcome to Twitter Clone
+      h1 Welcome
+      hr
       p Start a conversation, explore your interests, and be in the know.
 
       = link_to 'Sign up', signup_path, class: "btn btn-primary"
