--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,7 +1,7 @@
 .navbar.navbar-default.navbar-fixed-top role="navigation"
   .container
     .navbar-header
-      = link_to "Twitter Clone", root_path, class: "navbar-brand"
+      = link_to "Twitter", root_path, class: "navbar-brand"
       button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse"
         span.sr-only Toggle navigation
         span.icon-bar
