--- a/app/views/static_pages/about.html.slim
+++ b/app/views/static_pages/about.html.slim
@@ -1,3 +1,8 @@
-h1 About
-p Twitter clone app built with Ruby on Rails. See more details on <a href="https://github.com/toshimaru/Rails-4-Twitter-Clone">Github</a>.
-p Author: <a href="https://twitter.com/toshimaru_e"> toshimaru</a>
+.container
+  div.col-md-12.one-col
+    h1 About
+    hr
+    p Twitter app built with Ruby on Rails.
+    p
+      | Author:
+      = link_to " Marcel Breuer", author_path
