--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -3,12 +3,13 @@
 .row
   div.col-md-12.one-col
     h1 Sign up
+    hr
 
     = form_for(@user) do |f|
       = render 'shared/error_messages', object: f.object
 
       .form-group
-        = f.label :slug, class: 'control-label'
+        = f.label :nickname, class: 'control-label'
         = f.text_field :slug, class: 'form-control'
 
       .form-group
